css style stuff

--- a/w3_css_example/style.css
+++ b/w3_css_example/style.css
@@ -1,1 +1,42 @@
 /*styles go here*/
+
+p {
+  color: red;
+}
+
+p{
+  color:#666666;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+h1 {
+  font-family: Georgia, "Times New Roman", serif;
+}
+
+#container {
+ width: 95%;
+  /*margin-top: 0;
+  margin-right: auto;
+  margin-bottom: : 0;
+  margin-left: auto;
+  margin: 0 auto 0 auto; */
+  margin: 0 auto;
+}
+
+#nav {
+  list-style-type: none;
+  padding: 0;
+}
+
+#nav li {
+  /*text-decoration: none; */
+}
+
+#nav a:link {
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #98bf21;
+  font-weight: bold;
+  text-align: center;
+  display: block; 
+}
