--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/*styles go here*/
-
 p {
 	color: #666666;
     font-family: Helvetica, Arial, sans-serif;
@@ -54,6 +52,10 @@ h1 {
   font-family: Georgia, "Times New Roman", serif;
   font-size: 0.8em;
   border-top: 1px solid black;
+}
+
+#title {
+	background-color: pink;
 }
 
 img {
