--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
 p {
 	color: #666666;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: 'Merriweather', Georgia, "Times New Roman", serif;
 }
 
 h1 {
-    font-family: Georgia, "Times New Roman", serif;
+    font-family: 'Merriweather Sans', sans-serif;
 }
+
+.italic {
+	font-style: italic;
+}
+
 
 #container{
     width: 95%;
@@ -24,25 +29,25 @@ h1 {
 #nav a:link, #nav a:visited {
   text-decoration: none;
   color: #ffffff;
-  background-color: #98bf21;
+  background-color: #7B68EE;
   font-weight: bold;
   text-align: center;
   display: block;
   text-decoration: none;
 	text-align: center;
-  font-family: Helvetica, Arial, sans-serif;
-  padding: 4px
+  font-family: Arial, 'Merriweather',"Times New Roman",Georgia, serif;
+  padding: 7px
 }
 
 #nav a:hover, #nav a:active {
-  background-color: #7a991a;
+  background-color: #483D8B;
 }
 
 .caption {
   color: black;
   font-family: Georgia, "Times New Roman", serif;
   font-style: italic;
-  font-size: 0.8em;
+  font-size: 1em;
   margin-top: 0;
   text-align: right;
 }
@@ -56,6 +61,8 @@ h1 {
 
 #title {
 	background-color: pink;
+	font-size: 2.5em;
+	text-align: center;
 }
 
 img {
