--- a/flexbox_example/1-flex-display/start/css/flexbox.css
+++ b/flexbox_example/1-flex-display/start/css/flexbox.css
@@ -4,6 +4,9 @@
 
 .container {
   display: flex;
-  /*flex-direction: row-reverse; */
+  flex-direction: row;
+  flex-direction: row-reverse;
   flex-direction: column;
+  flex-direction: column-reverse;
+
 }
