--- a/flexbox_example/6-align-content/start/css/flexbox.css
+++ b/flexbox_example/6-align-content/start/css/flexbox.css
@@ -6,5 +6,10 @@
 	display: flex;
 	height: 300px;
 	flex-wrap: wrap;
+	align-content: stretch;
+	align-content: flex-start;
+	align-content: flex-end;
+	align-content: center;
 	align-content: space-between;
+	align-content: space-around;
 }
