--- a/flexbox_example/7-order/start/css/flexbox.css
+++ b/flexbox_example/7-order/start/css/flexbox.css
@@ -4,16 +4,29 @@
 
 .container {
 	display: flex;
+	flex-flow: column;
+}
+/*
+@@media screen and (min-width: 600px) {
+	container{
+		flex-flow: row;
+	}
+	,item-1 {
+		order: 1;
+	}
 }
 
-.item-2 {
+} */
+
+/* .item-2 {
 	order: -1;
 }
 
 .item-3 {
-	order: -2; 
+	order: -2;
 }
 
 .item-6 {
 	order: 1;
 }
+ */
