--- a/flexbox_example/13-centering/start/css/flexbox.css
+++ b/flexbox_example/13-centering/start/css/flexbox.css
@@ -2,7 +2,17 @@
   Flexbox
 ==================================== */
 
-.container {
+/* .container {
+	display: flex;
+	height: 50vh;
+	justify-content: center;
+}
+
+.item {
+	align-self: center;
+} */
+
+.containter {
 	display: flex;
 	height: 50vh;
 }
@@ -10,3 +20,7 @@
 .item {
 	margin: auto;
 }
+
+
+
+{}
